<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dmetasoul</groupId>
    <artifactId>arrow-c-data-jni</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <arrow.version>8.0.0</arrow.version>
        <javacpp.version>1.5.7</javacpp.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>javacpp</artifactId>
            <version>${javacpp.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-c-data</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-vector</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-memory-core</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-memory-netty</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-format</artifactId>
            <version>${arrow.version}</version>
        </dependency>
    </dependencies>

    <build>
    <extensions>
        <extension>
            <groupId>kr.motd.maven</groupId>
            <artifactId>os-maven-plugin</artifactId>
            <version>1.7.0</version>
        </extension>
    </extensions>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M6</version>
            <configuration>
                <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
            </configuration>
        </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>2.3</version>
            <executions>
                <execution>
                    <id>properties</id>
                    <goals>
                        <goal>properties</goal>
                    </goals>
                </execution>
                <!--
                    puts the dependencies to the target/lib folder;
                    we would need the javacpp-1.1.jar to build the java wrapper shared library
                 -->
                <execution>
                    <id>dependencies</id>
                    <goals>
                        <goal>copy-dependencies</goal>
                    </goals>
                    <configuration>
                        <outputDirectory>${project.build.directory}/lib</outputDirectory>
                    </configuration>
                </execution>
            </executions>
        </plugin>

        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>1.1</version>
            <!-- this is how the shared library libfoo.so is built -->
            <executions>
                <execution>
                    <id>build-arrow-cpp-lib</id>
                    <phase>initialize</phase>
                    <goals>
                        <goal>exec</goal>
                    </goals>
                    <configuration>
                        <executable>sh</executable>
                        <commandlineArgs>build_arrow.sh</commandlineArgs>
                        <workingDirectory>${basedir}</workingDirectory>
                    </configuration>
                </execution>

                <execution>
                    <id>build-arrow-c-data-jni-bridge</id>
                    <phase>process-classes</phase>
                    <goals>
                        <goal>exec</goal>
                    </goals>
                    <configuration>
                        <executable>java</executable>
                        <commandlineArgs>-jar ${project.build.directory}/lib/javacpp-${javacpp.version}.jar -cp ${project.build.directory}/classes org.apache.arrow.lakesoul.javacpp.java.CDataJavaConfig</commandlineArgs>
                        <workingDirectory>${project.build.directory}/classes</workingDirectory>
                    </configuration>
                </execution>

                <execution>
                    <id>build-arrow-c-data-jni</id>
                    <phase>process-classes</phase>
                    <goals>
                        <goal>exec</goal>
                    </goals>
                    <configuration>
                        <executable>java</executable>
                        <commandlineArgs>-jar ${project.build.directory}/lib/javacpp-${javacpp.version}.jar -cp ${project.build.directory}/classes org/apache/arrow/lakesoul/javacpp/java/CDataJavaToCppInterface.java</commandlineArgs>
                        <workingDirectory>${project.build.directory}/classes</workingDirectory>
                    </configuration>
                </execution>

            </executions>
        </plugin>
    </plugins>
    </build>




</project>